--- a/pipfile
+++ b/pipfile
@@ -5,11 +5,13 @@ name = "pypi"
 
 [packages]
 tricore-backtrace = {editable = true, path = "."}
+"zope.interface" = {editable = true, path = "."}
 
 [dev-packages]
 autopep8 = "*"
 pylint = "*"
 black = "*"
+pylint_protobuf = "*"
 
 [requires]
 python_version = "3.10"
